--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "divineomega/password_exposed",
-    "description": "This PHP package provides an `password_exposed` helper function, that uses the haveibeenpwned.com to check if a password has been exposed in a data breach.",
+    "description": "This PHP package provides an `password_exposed` helper function, that uses the haveibeenpwned.com API to check if a password has been exposed in a data breach.",
     "type": "library",
     "authors": [
         {
