Integrate with paragonie/certainty for validated SSL/TLS certificates

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ install:
   - composer update
 script:
  - ./vendor/bin/phpunit --coverage-clover ./tests/Logs/clover.xml
+ - ./vendor/bin/psalm
 after_script:
  - php vendor/bin/php-coveralls -v
