--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "require-dev": {
         "phpunit/phpunit": "^5.7",
         "fzaninotto/faker": "^1.7",
-        "satooshi/php-coveralls": "^2.0"
+        "satooshi/php-coveralls": "^2.0",
+        "vimeo/psalm": "^1"
     },
     "autoload": {
         "psr-4": {
@@ -24,6 +25,7 @@
     "license": "LGPL-3.0-only",
     "require": {
         "guzzlehttp/guzzle": "^6.3",
+        "paragonie/certainty": "^1",
         "rapidwebltd/rw-file-cache-psr-6": "^1.0"
     }
 }
