--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     },
     "license": "LGPL-3.0-only",
     "require": {
+        "php": ">=5.6",
         "guzzlehttp/guzzle": "^6.3",
         "paragonie/certainty": "^1",
         "rapidwebltd/rw-file-cache-psr-6": "^1.0"
