--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     "require-dev": {
         "phpunit/phpunit": "^5.7",
         "fzaninotto/faker": "^1.7",
-        "satooshi/php-coveralls": "^2.0",
-        "vimeo/psalm": "^1"
+        "vimeo/psalm": "^1",
+        "php-coveralls/php-coveralls": "^2.1"
     },
     "autoload": {
         "psr-4": {
@@ -27,6 +27,6 @@
         "php": ">=5.6",
         "guzzlehttp/guzzle": "^6.3",
         "paragonie/certainty": "^1",
-        "rapidwebltd/rw-file-cache-psr-6": "^1.0"
+        "divineomega/do-file-cache-psr-6": "^2.0"
     }
 }
