--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
 language: php
 dist: trusty
 php:
+  - '7.0'
   - '7.1.18'
   - '7.2'
+  - nightly
   - 'hhvm'
+matrix:
+  allow_failures:
+    - php: nightly
 install:
-  - composer update
+  - composer install
 script:
  - ./vendor/bin/phpunit --coverage-clover ./tests/Logs/clover.xml
  - ./vendor/bin/psalm
