--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
+        "phpunit/phpunit": "^6.5",
         "fzaninotto/faker": "^1.7",
         "vimeo/psalm": "^1",
         "php-coveralls/php-coveralls": "^2.1"
@@ -22,9 +22,14 @@
             "src/PasswordExposedFunction.php"
         ]
     },
+    "autoload-dev": {
+        "psr-4": {
+            "DivineOmega\\PasswordExposed\\Tests\\": "tests/"
+        }
+    },
     "license": "LGPL-3.0-only",
     "require": {
-        "php": ">=5.6",
+        "php": ">=7.0",
         "guzzlehttp/guzzle": "^6.3",
         "paragonie/certainty": "^1",
         "divineomega/do-file-cache-psr-6": "^2.0"
