--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     "require": {
         "php": ">=5.6",
         "guzzlehttp/guzzle": "^6.3",
-        "paragonie/certainty": "^1",
+        "paragonie/certainty": "^1|^2",
         "divineomega/do-file-cache-psr-6": "^2.0"
     }
 }
