--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,12 @@
     },
     "license": "LGPL-3.0-only",
     "require": {
-        "php": ">=5.6",
-        "guzzlehttp/guzzle": "^6.3",
+        "php": "^7.1",
+        "psr/http-client": "^1.0",
+        "psr/http-message": "^1.0",
+        "php-http/guzzle6-adapter": "^1.1|2.0",
+        "php-http/discovery": "^1.6",
+        "nyholm/psr7": "^1.0",
         "paragonie/certainty": "^1|^2",
         "divineomega/do-file-cache-psr-6": "^2.0"
     }
