--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "psr/http-client": "^1.0",
         "psr/cache": "^1.0",
         "psr/http-message": "^1.0",
-        "php-http/guzzle6-adapter": "^1.1|2.0",
+        "psr/http-message-implementation": "^1.0",
+        "psr/http-factory-implementation": "^1.0",
+        "php-http/guzzle6-adapter": "^1.1|^2.0",
         "php-http/discovery": "^1.6",
         "nyholm/psr7": "^1.0",
         "paragonie/certainty": "^1|^2",
