--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,11 @@
         "psr/http-message": "^1.0",
         "psr/http-message-implementation": "^1.0",
         "psr/http-factory-implementation": "^1.0",
-        "php-http/guzzle6-adapter": "^1.1|^2.0",
         "php-http/discovery": "^1.6",
         "nyholm/psr7": "^1.0",
         "paragonie/certainty": "^1|^2",
-        "divineomega/do-file-cache-psr-6": "^2.0"
+        "divineomega/do-file-cache-psr-6": "^2.0",
+        "divineomega/psr-18-guzzle-adapter": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5",
