--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "divineomega/psr-18-guzzle-adapter": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.5",
+        "phpunit/phpunit": "^7.0||^8.0",
         "fzaninotto/faker": "^1.7",
         "vimeo/psalm": "^1",
         "kriswallsmith/buzz": "^1.0",
