--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.1||^8.0",
         "psr/http-client": "^1.0",
         "psr/cache": "^1.0",
         "psr/http-message": "^1.0",
