--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     "require-dev": {
         "phpunit/phpunit": "^7.0||^8.0",
         "fzaninotto/faker": "^1.7",
-        "vimeo/psalm": "^1",
+        "vimeo/psalm": "1.1.8",
         "kriswallsmith/buzz": "^1.0",
         "symfony/cache": "^4.2.12",
         "php-coveralls/php-coveralls": "^2.1"
